--- a/closest_element.ipynb
+++ b/closest_element.ipynb
@@ -95,8 +95,29 @@
     "    # find smallest sum\n",
     "    smallest_sum_idx = np.argmin(sum_of_abs_differences)\n",
     "    \n",
-    "    #return array element at the position of the smallest sum's index\n",
+    "    # return array element at the position of the smallest sum's index\n",
     "    return a[smallest_sum_idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "19a36d19-9bac-4392-a28a-70597ed87ee9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def closest_element_numpy2(a: List[int]) -> int:        \n",
+    "    a = np.array(a)\n",
+    "    n = len(a)\n",
+    "    left_sum = np.cumsum(a) \n",
+    "    right_sum = np.cumsum(a[::-1])[::-1] \n",
+    "    total_sum = left_sum[-1]\n",
+    "\n",
+    "    cost = (np.arange(n) + 1) * a - left_sum \n",
+    "    cost += total_sum - right_sum - (n - np.arange(n)) * a\n",
+    "\n",
+    "    min_cost_index = np.argmin(cost)\n",
+    "    return a[min_cost_index]"
    ]
   },
   {
@@ -109,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "fb2e48d6-ddcf-426b-a01e-301e04729939",
    "metadata": {},
    "outputs": [],
@@ -130,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "85249620-8eac-45e7-8715-106692590623",
    "metadata": {},
    "outputs": [],
@@ -156,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "986cc2fc-7c3c-4e25-ba9e-c4c828e3b422",
    "metadata": {},
    "outputs": [],
@@ -184,7 +205,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35.7 ms ± 0 ns per loop (mean ± std. dev. of 1 run, 100 loops each)\n"
+      "34.6 ms ± 0 ns per loop (mean ± std. dev. of 1 run, 100 loops each)\n"
      ]
     }
    ],
@@ -195,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "0b4c9aaa-a4bf-407e-acb1-a73281aabd1c",
    "metadata": {},
    "outputs": [
@@ -203,7 +224,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.28 ms ± 0 ns per loop (mean ± std. dev. of 1 run, 100 loops each)\n"
+      "2.22 ms ± 0 ns per loop (mean ± std. dev. of 1 run, 100 loops each)\n"
      ]
     }
    ],
@@ -230,7 +251,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 67.85 MiB, increment: 1.48 MiB\n"
+      "peak memory: 78.92 MiB, increment: 0.18 MiB\n"
      ]
     }
    ],
@@ -242,14 +263,14 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "56f49e7c-3767-4d62-887a-940889a872dd",
+   "id": "2cdb1f4e-da82-4eeb-b68b-7cd372a86548",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 67.85 MiB, increment: 0.00 MiB\n"
+      "peak memory: 79.12 MiB, increment: 0.00 MiB\n"
      ]
     }
    ],
@@ -261,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cdb1f4e-da82-4eeb-b68b-7cd372a86548",
+   "id": "f363cf2b-3eea-49e6-babe-90bcb855a74e",
    "metadata": {},
    "outputs": [],
    "source": []
